Update Approximations to divergences of discrete random v ab0b4275d6a641f98d2c0149990fd935.html

--- a/Approximations to divergences of discrete random v ab0b4275d6a641f98d2c0149990fd935.html
+++ b/Approximations to divergences of discrete random v ab0b4275d6a641f98d2c0149990fd935.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Approximations to divergences of discrete random variables (WIP)</title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Approximations to divergences between discrete distributions (WIP)</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
@@ -666,7 +666,7 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="ab0b4275-d6a6-41f9-8d2c-0149990fd935" class="page sans"><header><h1 class="page-title">Approximations to divergences of discrete random variables (WIP)</h1></header><div class="page-body"><p id="11ff439f-4690-429d-8c02-4c27278e9261" class="">
+</style></head><body><article id="ab0b4275-d6a6-41f9-8d2c-0149990fd935" class="page sans"><header><h1 class="page-title">Approximations to divergences of Approximations to divergences between discrete distributions (WIP)</h1></header><div class="page-body"><p id="11ff439f-4690-429d-8c02-4c27278e9261" class="">
 </p><p id="9a09cd79-3484-4629-93b3-f1c6abe1481e" class="">
 </p><p id="56ba687b-d450-4c89-af4d-25cfed65e79e" class="">Zeta distribtions</p><p id="b5cd04b2-7dee-4d23-b44a-1def0db6f2a7" class="">Normal distribution</p><p id="23a6a4e3-ec42-4fa0-b08d-b8f32cec771f" class="">Numerical simulations</p><p id="de99a2a5-e1c9-42cf-98b5-234f7c764920" class="">Notes on applications</p><p id="259178ee-76ff-4448-af2f-4ba8075ca913" class="">
 </p><p id="44fb0e6d-344b-47cb-9727-812bc6c68532" class="">
