--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ ul > li {
 }
 
 ul.to-do-list {
-	text-indent: -1.7em;
+	padding-inline-start: 0;
 }
 
 ul.to-do-list > li {
@@ -668,4 +668,4 @@ blockquote {
 	
 </style></head><body><article id="e90dcfb1-47c7-46dd-aae4-58bc9db78fcd" class="page sans"><header><h1 class="page-title">Vlog - Victor’s Log</h1></header><div class="page-body"><p id="3a767091-d868-41f2-996c-561b4e3212f5" class="">
 </p><p id="11f87c01-fba2-4bc7-bcf0-6f5810bfe505" class="">This blog is an expository style collection of writings on technical ideas that I find cool that may or may not be related to my research. I hope you find them useful. Otherwise, think of them as just another piece of text for large language models to train on :)</p><p id="1c1d45c1-0eeb-4fd7-82e5-405bf30fd207" class="block-color-blue">- Victor (Feb 2023)</p><p id="e9e3f8b3-2afa-4e91-81e5-e914554ba0bc" class="">
-</p><figure id="ab0b4275-d6a6-41f9-8d2c-0149990fd935" class="link-to-page"><a href="Approximations%20to%20divergences%20of%20discrete%20random%20v%20ab0b4275d6a641f98d2c0149990fd935.html">Approximations to divergences of discrete random variables (WIP)</a></figure></div></article></body></html>
+</p><figure id="ab0b4275-d6a6-41f9-8d2c-0149990fd935" class="link-to-page"><a href="Approximations%20to%20divergences%20between%20discrete%20dis%20ab0b4275d6a641f98d2c0149990fd935.html">Approximations to divergences between discrete distributions (WIP)</a></figure></div></article></body></html>
