--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Vlog - Victor’s Log</title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Blog - Victor’s Log</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
@@ -666,6 +666,6 @@ blockquote {
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Crect%20x%3D%220.75%22%20y%3D%220.75%22%20width%3D%2214.5%22%20height%3D%2214.5%22%20fill%3D%22white%22%20stroke%3D%22%2336352F%22%20stroke-width%3D%221.5%22%2F%3E%0A%3C%2Fsvg%3E");
 }
 	
-</style></head><body><article id="e90dcfb1-47c7-46dd-aae4-58bc9db78fcd" class="page sans"><header><h1 class="page-title">Vlog - Victor’s Log</h1></header><div class="page-body"><p id="3a767091-d868-41f2-996c-561b4e3212f5" class="">
+</style></head><body><article id="e90dcfb1-47c7-46dd-aae4-58bc9db78fcd" class="page sans"><header><h1 class="page-title">Blog - Victor’s Log</h1></header><div class="page-body"><p id="3a767091-d868-41f2-996c-561b4e3212f5" class="">
 </p><p id="11f87c01-fba2-4bc7-bcf0-6f5810bfe505" class="">This blog is an expository style collection of writings on technical ideas that I find cool that may or may not be related to my research. I hope you find them useful. Otherwise, think of them as just another piece of text for large language models to train on :)</p><p id="1c1d45c1-0eeb-4fd7-82e5-405bf30fd207" class="block-color-blue">- Victor (Feb 2023)</p><p id="e9e3f8b3-2afa-4e91-81e5-e914554ba0bc" class="">
 </p><figure id="ab0b4275-d6a6-41f9-8d2c-0149990fd935" class="link-to-page"><a href="Approximations%20to%20divergences%20between%20discrete%20dis%20ab0b4275d6a641f98d2c0149990fd935.html">Approximations to divergences between discrete distributions (WIP)</a></figure></div></article></body></html>
